--- a/Backend Projects/tast_tracker/README
+++ b/Backend Projects/tast_tracker/README
@@ -94,4 +94,4 @@ $ task-cli list
 ```
 ---
 ## License
-This project is licensed under the MIT License.
+This project is licensed under the *MIT License*.
