adding proyject link and license badge

--- a/Backend Projects/tast_tracker/README
+++ b/Backend Projects/tast_tracker/README
@@ -4,7 +4,7 @@
 ![License](https://img.shields.io/badge/License-MIT-blue.svg)  
 ![Status](https://img.shields.io/badge/Status-Active-success) 
 
-link to the project: <a href="https://roadmap.sh/projects/task-tracker">Radmap.sh Project</a>  
+link to the project:  https://roadmap.sh/projects/task-tracker
   
 
 A simple **Command Line Interface (CLI)** application to manage your daily tasks.  
